<resources>
    <string name="app_name">WindMovieApp</string>
    <string name="facebook_app_id">790879075362297</string>
    <string name="fb_login_protocol_scheme">fb790879075362297</string>
    <string name="facebook_client_token">1511d86dec2ec0424e52fed25246f2e9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errorMessageLabel">Sorry, Something error</string>
    <string name="exampleEmailLabel">Exampl@gmail.com</string>
    <string name="passwordLabel">Password</string>
    <string name="emailAddressLabel">Email address</string>
    <string name="rememberAccountLabel">Remember My Account</string>
    <string name="loginLabel">LOGIN</string>
    <string name="orLabel">Or</string>
    <string name="forgotPasswordLabel">Forgot Password?</string>
    <string name="downloadLabel">Downloads</string>
    <string name="newAndHotLabel">New &amp; Hot</string>
    <string name="homeLabel">Home</string>
    <string name="okeLabel">Ok</string>
    <string name="emptyLabel" />
    <string name="cancelLabel">Cancel</string>
    <string name="signUpLabel">sign up</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="playLabel">Play</string>
    <string name="myListLabel">My List</string>
    <string name="playAndInfoLabel"><![CDATA[Play & Info]]></string>
    <string name="qualityMovieLabel">Excellent movie quality with maximum realism</string>
    <string name="premiumAccountLabel">Download Movie Unlimited with premium account</string>
    <string name="hugeMovieStoreLabel">Huge movie store full of categories</string>
    <string name="fastestMovieNotifiLabel">Get the fastest notifications from new movies</string>
    <string name="signInFailLabel">Sign In Unsuccessfully</string>
    <string name="signInSuccessLabel">Sign In Successfully</string>
    <string name="signUpFailLabel">Sign Up Unsuccessfully </string>
    <string name="signUpSuccessLabel">Sign Up Successfully</string>
    <string name="emailPasswordFailLabel">Sorry, the email address or password is incorrect</string>
    <string name="verifyEmailLabel">Please, Verify your email into gmail app</string>
    <string name="windMovieLabel">WindMovie</string>
    <string name="tvShowsLabel">TV Shows</string>
    <string name="moviesLabel">Movies</string>
    <string name="categoriesLabel">Categories</string>
    <string name="permissionDeniedLabel">Permissions Denied</string>
    <string name="permissionGrantedLabel">Permissions Granted</string>
    <string name="noInternetMess">Seems like there is no internet connection. Please connect and try again.</string>
    <string name="textExitAppContent">Do you want exit from the application?</string>
    <string name="rateLabel">Rate</string>
    <string name="moreLikeThisLabel">More Like This</string>
    <string name="trailerAndMoreLabel"><![CDATA[Trailer & More]]></string>
    <string name="movieDetailLabel">Movie Detail</string>
    <string name="removeMovieLabel">Do you want to remove the movie \nname: %s</string>
    <string name="emptyDataLabel">It is empty to here</string>
    <string name="thankLabel">Thanks, for love</string>
    <string name="searchForLabel">Search for a character, show or more....</string>
    <string name="adUnitID">ca-app-pub-3292279140391234/1127228964</string>
    <string name="addMovieLabel">Add Movie</string>
    <string name="movieIdLabel">Movie ID</string>
    <string name="movieNameLabel">Movie Name</string>
    <string name="movieDescLabel">Description</string>
    <string name="movieYearOfReleaseLabel">Year Of Release</string>
    <string name="movieDurationLabel">Duration</string>
    <string name="movieTrailerLabel">Trailer Uri</string>
    <string name="movieLabel">Movie Uri</string>
    <string name="imageLabel">Movie Image</string>
    <string name="profileLabel">Profile</string>
    <string name="changeAvtLabel">Change Avatar</string>
    <string name="usernameLabel">Username</string>
    <string name="emailLabel">Email</string>
    <string name="phoneLabel">Phone</string>
    <string name="accountType">Account Type</string>
    <string name="idLabel">ID</string>
    <string name="updateLabel">Update</string>
    <string name="maleLabel">Male</string>
    <string name="femaleLabel">Female</string>
    <string name="genderLabel">Gender</string>
    <string name="arrangeByLabel">Arrange By:</string>
    <string name="nothingLabel">Nothing</string>
    <string name="writeCmtLabel">Write Comment…</string>
    <string name="commentLabel">Comments</string>
    <string name="userManagementLabel">User Management</string>
    <string name="movieManagementLabel">Movie Management</string>
    <string name="feedbackManagementLabel">Feedback Management</string>
    <string name="statisticLabel">Statistic and Report</string>
    <string name="updateInfo">Update User Info</string>
    <string name="myMovieListLabel">Love Movie</string>
    <string name="logOutLabel">Logout</string>
    <string name="meLabel">Me</string>
    <string name="notificationLabel">Notifications</string>
    <string name="removeNotifyLabel">Remove this notification</string>
    <string name="default_notification_channel_id">channelID</string>
    <string name="alertCmtEmptyLabel">Please comment before rating movie</string>
    <string name="commentFailLabel">Comment Fail</string>
    <string name="emailAndPasswordNotEmpty">Email and Password can\'t not be empty</string>
    <string name="categoryLabel">Category</string>
    <string name="postVideoFailure">Post Video On Server Failure</string>
    <string name="updateMovieLabel">Update Movie</string>
    <string name="infoMovieLabel">Info Movie</string>
    <string name="idMovieExistLabel">ID Movie Exist !!!</string>
    <string name="addFieldInsertMovie">Please! Fill All Field Before Insert Movie</string>
    <string name="addFieldUpdateMovie">Please! Fill All Field Before Update Movie</string>
    <string name="postImageFail">Post Image On Server Storage Fail. Try Again!</string>
    <string name="postMovieFail">Post Movie On Server Storage Fail. Try Again!</string>
    <string name="postTrailerFail">Post Trailer On Server Storage Fail. Try Again!</string>
    <string name="postMovieOnServerSuccess">Post Movie On Server Success</string>
    <string name="confirmRemoveMovie">Remove Movie %s with ID %s</string>
    <string name="removeMovieFail">Remove Movie Failure</string>
    <string name="numberRatings">Number of Rating On Movie</string>
    <string name="saveToGallery">Save Gallery</string>
    <string name="numberCommentLabel">%d Comment</string>
    <string name="chooseLabel">Choose</string>
    <string name="newestLabel">Newest</string>
    <string name="oldestLabel">Oldest</string>
    <string name="arrangeCmtLabel">Arrange Comment</string>
    <string name="helpserviceLabel">Help Service</string>
    <string name="feedbacks">Feedbacks, Help Center, Online Chat are here</string>
    <string name="accountLabel">ACCOUNT</string>
    <string name="supportLabel">SUPPORT</string>
    <string name="notificationLineCentreLabel">Notification\nCentre</string>
    <string name="shareAppLabel">Share App</string>
    <string name="myProfileLabel">Profile</string>
    <string name="userManagementBreakLine">User-M</string>
    <string name="movieManagementBreakLine">Movie-M</string>
    <string name="feedbackManagementBreakLine">Feedback-M</string>
    <string name="statisticBreakLine">Statistic\nReport</string>
    <string name="monthly">Monthly\n59.000VND</string>
    <string name="yearly">Yearly\n399.000VND</string>
    <string name="moreFilm">1000+ movies</string>
    <string name="noAds">No ADS</string>
    <string name="downloadMoreLabel">Download Movie Unlimited</string>
    <string name="qualityHigher">Movie Quality Higher</string>
    <string name="buyLabel">Buy</string>
    <string name="vipPackage">Update Vip Package</string>
    <string name="goldenmember">Update Vip Package To Be Come A Golden Member</string>
    <string name="copyright_by_phong">Copyright by Phong</string>
    <string name="vipLabel">VIP</string>
    <string name="kidsLabel">Kids</string>
    <string name="members">WindMember</string>
    <string name="who_is_watching">Who is Watching?</string>
    <string name="feedbackLabel">Feedbacks</string>
</resources>