<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/holo_red_light"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/sp22"
        android:layout_marginTop="@dimen/dp30"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/who_is_watching"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvAdult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvKids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kidsLabel"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tvAdult"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/dp60"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAdult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp60"
        android:minWidth="@dimen/dp64"
        android:minHeight="@dimen/dp64"
        android:text="@string/members"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/adult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvKids"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>