<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerDialogCreateNewGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dp10"
        android:elevation="@dimen/dp16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitleDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/redB11313"
                android:textSize="@dimen/sp18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rdgCmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDialog"
                android:paddingHorizontal="@dimen/dp16"
                android:paddingVertical="@dimen/dp16">

                <RadioButton
                    android:id="@+id/cmtNewest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redB11313"
                    android:buttonTint="@color/redB11313"
                    android:text="@string/newestLabel"
                    android:layout_marginEnd="@dimen/dp16"/>

                <RadioButton
                    android:id="@+id/cmtOldest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redB11313"
                    android:buttonTint="@color/redB11313"
                    android:text="@string/oldestLabel"
                    android:layout_marginEnd="@dimen/dp16"/>

                <RadioButton
                    android:id="@+id/cmtNothing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redB11313"
                    android:buttonTint="@color/redB11313"
                    android:text="@string/nothingLabel"/>

            </RadioGroup>

            <View
                android:id="@+id/horizontalLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginTop="@dimen/dp20"
                android:background="@color/redB11313"
                app:layout_constraintTop_toBottomOf="@id/rdgCmt"/>

            <TextView
                android:id="@+id/tvAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/dp25"
                android:paddingVertical="@dimen/dp8"
                android:text="@string/chooseLabel"
                android:textColor="@color/white"
                android:textSize="@dimen/sp17"
                android:background="@drawable/bg_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontalLine"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>